# neovim-configuration-via-c-api

./: Cargo.toml  README.org  build.sh  build_release.sh  build_support_missing_api.sh
.cargo/: config.toml
src/: auto_groups.rs  extended_api.rs  keybindings.rs  lib.rs  my_dired.rs  picker.rs  project_command.rs  settings.rs  utils.rs
src/picker/: keybindings.rs  picker.rs  popup_window.rs
