[package]
name = "my-neovim-configuration"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
# default = [ "enable_my_dired_debug_print" ]
# default = [ "enable_auto_groups_debug_print" ]
default = []

# Plugin debug print: `src/lib.rs`
enable_plugin_debug_print = []

# `my_dired` specified debug print: `src/my_dired.rs`
enable_my_dired_debug_print = []

# Auto group debug print: `src/auto_groups.rs`
enable_auto_groups_debug_print = []

[dependencies]
nvim-oxi = { version = "0.6.0", features = ["neovim-0-11"] }
# nvim-oxi = { path = "../nvim-oxi", features = ["neovim-0-11"] }
rust_utils = { git = "https://github.com/wisonye/rust-utils.git", branch = "master" }
